instead of over and over. Typical speedup is ~4x. Max possible speedup:   8x. * Add "scan" parameter to hook(), which is used to make the hook be called   during the scanning pass, as well as the render pass. The meta and tag   plugins need to use the new scan parameter, so will any others that modify   %links. * Now that links are calculated in a separate pass, it can also   precalculate backlinks in one pass, which is O(N^2) instead of the   previous code that was O(N^3). A very nice speedup for wikis with lots   (thousands) of pages.

--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,11 @@
+ikiwiki (1.32) unstable; urgency=low
+
+  There is a change to the plugin interface in this version. Any plugins that
+  modify data in %links should pass scan => 1 when registering the hook that
+  does so.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Oct 2006 00:13:12 -0400
+
 ikiwiki (1.29) unstable; urgency=low
 
   Wikis need to be rebuilt on upgrade to this version. If you listed your wiki
