* Now that links are calculated in a separate pass, it can also * Stylish update to the ikiwiki logo, thanks to Recai Oktaş and Selçuk   Erdem.

--- a/doc/logo.mdwn
+++ b/doc/logo.mdwn
@@ -14,6 +14,7 @@ added).
   with a command like:  
 
 	inkscape -w 90 -i logo -e ikiwiki.png ikiwiki.svgz
+	inkscape -w 150 -i logo -e ikiwiki_large.png ikiwiki.svgz
 
   The [[favicon.ico]] can also be generated from this file, as follows:
 
@@ -27,6 +28,12 @@ added).
   and can be extracted by specifying their names.
 
   [[img ikiwiki.png alt="bob" size="200x200"]]
+
+  Contributed by Recai Oktaş
+
+* [[ikiwiki_logo|ikiwiki_old2.png]]
+
+  [[SVG_source|ikiwiki_old2.svgz]] to this older version of the logo.
 
   Contributed by Recai Oktaş
 
