--- a/debian/changelog
+++ b/debian/changelog
@@ -7,12 +7,14 @@ ikiwiki (1.32) UNRELEASED; urgency=low
     during the scanning pass, as well as the render pass. The meta and tag
     plugins need to use the new scan parameter, so will any others that modify
     %links.
-  * Now that links are calculated in a separate pass, it can also 
+  * Now that links are calculated in a separate pass, it can also
     precalculate backlinks in one pass, which is O(N^2) instead of the
     previous code that was O(N^3). A very nice speedup for wikis with lots
     (thousands) of pages.
+  * Stylish update to the ikiwiki logo, thanks to Recai Oktaş and Selçuk
+    Erdem.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 27 Oct 2006 23:27:29 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Oct 2006 13:14:04 -0400
 
 ikiwiki (1.31) unstable; urgency=low
 
