* Add a default stylesheet entry for the pagecloud. * Add examples page with some examples of things that can be done using   ikiwiki, like a weblog. The examples can be copied into a user's wiki   for a quick start, without needing to learn everything about how to put   them together.

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,8 +13,13 @@ ikiwiki (1.32) UNRELEASED; urgency=low
     (thousands) of pages.
   * Stylish update to the ikiwiki logo, thanks to Recai Oktaş and Selçuk
     Erdem.
+  * Add a default stylesheet entry for the pagecloud.
+  * Add examples page with some examples of things that can be done using
+    ikiwiki, like a weblog. The examples can be copied into a user's wiki
+    for a quick start, without needing to learn everything about how to put
+    them together.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 28 Oct 2006 13:14:04 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Oct 2006 19:23:03 -0400
 
 ikiwiki (1.31) unstable; urgency=low
 
