--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -53,7 +53,8 @@ specified [[PageSpec]] will be displayed as a weblog within the blog
 page. And RSS or Atom feeds can be generated to follow the blog.
 
 Ikiwiki's own [[TODO]], [[news]], and [[plugins]] pages are good examples
-of some of the flexible ways that this can be used.
+of some of the flexible ways that this can be used. There is also an 
+[[example_blog|examples/blog]] set up that you can copy into your own wiki.
 
 Ikiwiki can also [[plugins/aggregate]] external blogs, feeding them into
 the wiki. This can be used to create a Planet type site that aggregates
