* Install the source of the examples into /usr/share/doc/ikiwiki/examples.

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,8 +18,9 @@ ikiwiki (1.32) UNRELEASED; urgency=low
     ikiwiki, like a weblog. The examples can be copied into a user's wiki
     for a quick start, without needing to learn everything about how to put
     them together.
+  * Install the source of the examples into /usr/share/doc/ikiwiki/examples.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 28 Oct 2006 19:23:03 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Oct 2006 19:43:53 -0400
 
 ikiwiki (1.31) unstable; urgency=low
 
