--- a/doc/patchqueue/index.html_allowed/discussion.mdwn
+++ b/doc/patchqueue/index.html_allowed/discussion.mdwn
@@ -6,3 +6,5 @@ in a web environment. (And Python, which is where I do my hacking, imports Foo/_
 if you import Foo.)
 
 Ethan
+
++1 for this patch making it into trunk. --James
