* Add perlmagick to build-depends so syntax check of img plugin works.

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,8 +19,9 @@ ikiwiki (1.32) UNRELEASED; urgency=low
     for a quick start, without needing to learn everything about how to put
     them together.
   * Install the source of the examples into /usr/share/doc/ikiwiki/examples.
+  * Add perlmagick to build-depends so syntax check of img plugin works.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 28 Oct 2006 19:43:53 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 30 Oct 2006 14:30:54 -0500
 
 ikiwiki (1.31) unstable; urgency=low
 
