--- a/doc/plugins/aggregate.mdwn
+++ b/doc/plugins/aggregate.mdwn
@@ -1,8 +1,8 @@
 [[template id=plugin name=aggregate included=1 author="[[Joey]]"]]
 [[tag type/useful]]
 
-This plugin allows content from other blogs to be aggregated into the wiki.
-Aggregate a blog as follows:
+This plugin allows content from other feeds to be aggregated into the wiki.
+Aggregate a feed as follows
 
 	\[[aggregate name="example blog"
 	feedurl="http://example.com/index.rss"
@@ -35,7 +35,7 @@ directive:
 
 * `name` - A name for the feed. Each feed must have a unique name.
   Required.
-* `url` - The url to the web page for the blog that's being aggregated.
+* `url` - The url to the web page for the feed that's being aggregated.
   Required.
 * `dir` - The directory in the wiki where pages should be saved. Optional,
   if not specified, the directory is based on the name of the feed.
@@ -43,14 +43,13 @@ directive:
   will look for feeds on the `url`. RSS and atom feeds are supported.
 * `updateinterval` - How often to check for new posts, in minutes. Default
   is 15 minutes.
-* `expireage` - Expire old items from this blog if they are older than
-  a specified number of days. Default is to never expire on age. (Not yet
-  implemented.)
-* `expirecount` - Expire old items from this blog if there are more than
+* `expireage` - Expire old items from this feed if they are older than
+  a specified number of days. Default is to never expire on age.
+* `expirecount` - Expire old items from this feed if there are more than
   the specified number total. Oldest items will be expired first. Default
-  is to never expire on count. (Not yet implemented.)
-* `tag` - A tag to tag each post from the blog with. A good tag to use is
-  the name of the blog. Can be repeated multiple times. The [[tag]] plugin
+  is to never expire on count.
+* `tag` - A tag to tag each post from the feed with. A good tag to use is
+  the name of the feed. Can be repeated multiple times. The [[tag]] plugin
   must be enabled for this to work.
 
 Note that even if you are using subversion or another revision control
