--- a/doc/todo/firm_up_plugin_interface.mdwn
+++ b/doc/todo/firm_up_plugin_interface.mdwn
@@ -38,3 +38,5 @@ Variables used by plugins but not exported yet:
 
 * %IkiWiki::pagecase (aggregate)
 * %IkiWIki::backlinks (pagestats)
+
+[[todo/done]]
