--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -32,3 +32,5 @@ All the kinds of plugins that blogging software has is also a possibility:
 
 * How about an event calendar. Events could be sub-pages with an embedded 
  code to detail recurrance and/or event date/time
+
+* Vote taking plugin. It would need to store its data in a file in .ikiwiki/
