--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -60,6 +60,10 @@ Ikiwiki can also [[plugins/aggregate]] external blogs, feeding them into
 the wiki. This can be used to create a Planet type site that aggregates
 interesting feeds.
 
+You can also mix blogging with podcasting by dropping audio files where
+they will be picked up like blog posts. This will work for any files that
+you would care to syndicate.
+
 ## Valid html and [[css]]
 
 ikiwiki aims to produce 
