--- a/doc/todo/blogging.mdwn
+++ b/doc/todo/blogging.mdwn
@@ -129,3 +129,9 @@ that you have for the links at the top.
 
 > Thanks! I did tweak the css a bit. Not totally happy with it, but pretty
 > good I think. (I'll try to get to the other patches soon.) --[[Joey]]
+
+
+---
+
+I'm very happy to report that this is [[todo/done]]. Podcasting patch
+applied (finally!) --[[Joey]]
