--- a/basewiki/blog.mdwn
+++ b/basewiki/blog.mdwn
@@ -5,7 +5,9 @@ You can turn any page on this wiki into a weblog by inserting a
 
 Any pages that match the specified [[PageSpec]] (in the example, any
 [[SubPage]] of "blog") will be part of the blog, and the newest 10
-of them will appear in the page.
+of them will appear in the page. Note that if files that are not pages
+match the [[PageSpec]], they will be included in the feed using RSS
+enclosures, which is useful for podcasting.
 
 The optional `rootpage` parameter tells the wiki that new posts to this blog
 should default to being [[SubPage]]s of "blog", and enables a form at the
