--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -10,7 +10,7 @@ modules be installed, and also uses the following perl modules if
 available: 
 `CGI::Session` `CGI::FormBuilder` (version 3.02.02 or newer)
 `HTML::Template` `Mail::Sendmail` `Time::Duration` `Date::Parse`,
-`HTML::Scrubber`, `RPC::XML`, `XML::Simple`, `XML::Feed`.
+`HTML::Scrubber`, `RPC::XML`, `XML::Simple`, `XML::Feed`, `File::MimeInfo`.
 
 The [[tla]] support also needs the `MailTools` perl module.
 
