web commit by KyleMacLea

--- a/doc/todo/Renaming/Moving_Pages.mdwn
+++ b/doc/todo/Renaming/Moving_Pages.mdwn
@@ -9,3 +9,5 @@ Anyway to consider implementing **rename/move/delete** ?  I certainly lack the s
 Thanks again to [Joey](http://kitenet.net/~joey) for putting ikiwiki together.  I love the program. 
 
 *[Kyle](http://kitenet.net/~kyle/)=*
+
+>Speaking of renaming, I was a dumbass when I created this page, and now it is listed as a subpage of "Renaming".  Being able to rename it would help!  =)
