--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ ikiwiki (1.32) UNRELEASED; urgency=low
     them together.
   * Install the source of the examples into /usr/share/doc/ikiwiki/examples.
   * Add perlmagick to build-depends so syntax check of img plugin works.
+    Closes: #396702
   * Improve login/register process, the login dialog has only name and
     password fields, which allows more web browsers to regognise it as a login
     field, and is less confusing.
