--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.32) UNRELEASED; urgency=low
+ikiwiki (1.32) unstable; urgency=low
 
   * Add a separate pass to find page links, and only render each page once,
     instead of over and over. Typical speedup is ~4x. Max possible speedup:
@@ -35,7 +35,7 @@ ikiwiki (1.32) UNRELEASED; urgency=low
     or what have you, by creating enclosures for non-page items that are
     included in feeds.
 
- -- Joey Hess <joeyh@debian.org>  Wed,  1 Nov 2006 01:11:10 -0500
+ -- Joey Hess <joeyh@debian.org>  Fri,  3 Nov 2006 14:46:37 -0500
 
 ikiwiki (1.31) unstable; urgency=low
 
