--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.33) UNRELEASED; urgency=low
+
+  * Fix issue with aggregate plugin updating expired pages.
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  4 Nov 2006 14:19:47 -0500
+
 ikiwiki (1.32) unstable; urgency=low
 
   * Add a separate pass to find page links, and only render each page once,
