web commit by JoshTriplett: Add the Sparse wiki.

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -31,6 +31,7 @@ Sites that are using ikiwiki include:
 * Keith Packard's [homepage](http://keithp.com/) and blog.
 * Christian Mock's [homepage](http://www.tahina.priv.at/).
 * Simon Raven IkiWiki [homepage](http://simonraven.nuit.ca/wiki/).
+* The [Sparse wiki](http://kernel.org/pub/linux/kernel/people/josh/sparse).
 
 Please feel free to add your own ikiwiki site!
 
