web commit by EthanGlasserCamp

--- a/doc/todo/skip_option_for_inline_plugin.mdwn
+++ b/doc/todo/skip_option_for_inline_plugin.mdwn
@@ -2,3 +2,5 @@ How about a skip option for [[plugins/inline]]?  This would allow things like th
 
     \[[inline pages="news/*" show="5"]]
     \[[inline pages="news/*" skip="5" show="5" archive="yes"]]
+
+> I just wrote a patch. [[patchqueue/skip_option_for_inline_plugin]] --Ethan
