--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,10 @@ ikiwiki (1.33) UNRELEASED; urgency=low
   * Fix issue with aggregate plugin updating expired pages.
   * Avoid syntax errors in templates used by the template plugin crashing
     ikiwiki.
+  * Enable utf8 file IO in aggregate plugin.
+  * Fix some issues with the new registration form.
 
- -- Joey Hess <joeyh@debian.org>  Sun,  5 Nov 2006 18:41:06 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed,  8 Nov 2006 15:13:40 -0500
 
 ikiwiki (1.32) unstable; urgency=low
 
