--- a/doc/todo/skip_option_for_inline_plugin.mdwn
+++ b/doc/todo/skip_option_for_inline_plugin.mdwn
@@ -4,3 +4,5 @@ How about a skip option for [[plugins/inline]]?  This would allow things like th
     \[[inline pages="news/*" skip="5" show="5" archive="yes"]]
 
 > I just wrote a patch. [[patchqueue/skip_option_for_inline_plugin]] --Ethan
+
+[[todo/done]] --[[Joey]]
