--- a/doc/bugs/Disappearing_Pages.mdwn
+++ b/doc/bugs/Disappearing_Pages.mdwn
@@ -30,3 +30,6 @@ to be the use of sidebars and google calendar in the affected wiki.
 >>>> information that I couldn't distribute.  So I reproduced the bug on 
 >>>> another wiki and sent you that.  Those warnings don't seem to have any 
 >>>> effect on the disappearing content.  Sorry for the confusion.  --[[ScottHenson]]
+
+>>>> That's ok, but since I couldn't reproduce it with the data you sent,
+>>>> I can't really fix it. --[[Joey]]
