* Make sure to check for errors from every eval.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ ikiwiki (1.33) UNRELEASED; urgency=low
   * Enable utf8 file IO in aggregate plugin.
   * Fix some issues with the new registration form.
   * Patch from Ethan Glasser Camp to add a skip option to the inline plugin.
+  * Make sure to check for errors from every eval.
 
- -- Joey Hess <joeyh@debian.org>  Wed,  8 Nov 2006 15:39:16 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed,  8 Nov 2006 15:57:35 -0500
 
 ikiwiki (1.32) unstable; urgency=low
 
