* Work around a strange bug in CGI::FormBuilder 3.0401 that makes   FORM-SUBMIT unusable on customised formbuilder templates. For now,   hardcode the submit buttons in editpage.tmpl instead of using the   template variable, which is ok, since the buttons are static.

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,12 @@ ikiwiki (1.33) UNRELEASED; urgency=low
   * Make sure to check for errors from every eval.
   * Fix img plugin's handling of adding dependencies for images that do not
     yet exist.
+  * Work around a strange bug in CGI::FormBuilder 3.0401 that makes
+    FORM-SUBMIT unusable on customised formbuilder templates. For now,
+    hardcode the submit buttons in editpage.tmpl instead of using the
+    template variable, which is ok, since the buttons are static.
 
- -- Joey Hess <joeyh@debian.org>  Thu,  9 Nov 2006 15:57:52 -0500
+ -- Joey Hess <joeyh@debian.org>  Fri, 10 Nov 2006 02:34:49 -0500
 
 ikiwiki (1.32) unstable; urgency=low
 
