--- a/doc/todo/Moving_Pages.mdwn
+++ b/doc/todo/Moving_Pages.mdwn
@@ -9,3 +9,15 @@ Anyway to consider implementing **rename/move/delete** ?  I certainly lack the s
 Thanks again to [Joey](http://kitenet.net/~joey) for putting ikiwiki together.  I love the program. 
 
 *[Kyle](http://kitenet.net/~kyle/)=*
+
+----
+
+The MediaWiki moving/renaming mechanism is pretty nice.  It's easy to get a list of pages that point to the current page.  When renaming a page it sticks a forwarding page in the original place.  The larger the size of the wiki the more important organization tools become.
+
+I see the need for:
+
+* a new tool to mine incoming links to a given page
+* a new type of file to represent a forwarding page
+* a rename tool that can, at a minimum, move the existing page to the new name and optionally drop a forwarding page.  If not unreasonably difficult, optionally rewrite incoming links to the new location.
+
+Brad
