web commit by BradRoberts

--- a/doc/todo/Moving_Pages.mdwn
+++ b/doc/todo/Moving_Pages.mdwn
@@ -16,8 +16,12 @@ The MediaWiki moving/renaming mechanism is pretty nice.  It's easy to get a list
 
 I see the need for:
 
-* a new tool to mine incoming links to a given page
 * a new type of file to represent a forwarding page
-* a rename tool that can, at a minimum, move the existing page to the new name and optionally drop a forwarding page.  If not unreasonably difficult, optionally rewrite incoming links to the new location.
+* a rename tool that can
+* * move the existing page to the new name
+* * optionally drop a forwarding page
+* * optionally rewrite incoming links to the new location
+
+(hrm, side note, does markdown not support nested bulleted lists?)
 
 Brad
