web commit by EthanGlasserCamp: wikify

--- a/doc/todo/Moving_Pages.mdwn
+++ b/doc/todo/Moving_Pages.mdwn
@@ -18,9 +18,9 @@ I see the need for:
 
 * a new type of file to represent a forwarding page
 * a rename tool that can
-* * move the existing page to the new name
-* * optionally drop a forwarding page
-* * optionally rewrite incoming links to the new location
+  * move the existing page to the new name
+  * optionally drop a forwarding page
+  * optionally rewrite incoming links to the new location
 
 (hrm, side note, does markdown not support nested bulleted lists?)
 
