--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -47,3 +47,7 @@ with all news or the one with the latest news only, I don't know yet.)
 > Not currently. It could be implemented, or you could just turn off the
 > rss feed for the index page, and manually put in a wikilink to the news
 > page and rss feed. --[[Joey]]
+
+>> That wouldn't use the same style for the RSS and Atom links, and it
+>> wouldn't embed the feed link into `<head>` so that browsers can automatically
+>> find it.
