* Work with hyperestraier 1.4.9.

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,8 +13,9 @@ ikiwiki (1.33) UNRELEASED; urgency=low
     FORM-SUBMIT unusable on customised formbuilder templates. For now,
     hardcode the submit buttons in editpage.tmpl instead of using the
     template variable, which is ok, since the buttons are static.
+  * Work with hyperestraier 1.4.9.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 10 Nov 2006 02:34:49 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon, 13 Nov 2006 14:25:41 -0500
 
 ikiwiki (1.32) unstable; urgency=low
 
