--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.33) UNRELEASED; urgency=low
+ikiwiki (1.33) unstable; urgency=low
 
   * Fix issue with aggregate plugin updating expired pages.
   * Avoid syntax errors in templates used by the template plugin crashing
@@ -15,7 +15,7 @@ ikiwiki (1.33) UNRELEASED; urgency=low
     template variable, which is ok, since the buttons are static.
   * Work with hyperestraier 1.4.9.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 13 Nov 2006 14:25:41 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed, 15 Nov 2006 18:32:26 -0500
 
 ikiwiki (1.32) unstable; urgency=low
 
