--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ikiwiki (1.34) UNRELEASED; urgency=low
+
+  * Make auth methods pluggable.
+  * Move httpauth support to a plugin.
+  * Add an openid plugin to support logging in using OpenID.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 19 Nov 2006 16:40:26 -0500
+
 ikiwiki (1.33) unstable; urgency=low
 
   * Fix issue with aggregate plugin updating expired pages.
