--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
 ikiwiki (1.34) UNRELEASED; urgency=low
 
-  * Make auth methods pluggable.
-  * Move httpauth support to a plugin.
   * Add an openid plugin to support logging in using OpenID.
+  * Web commits by OpenID users will record the full OpenID url for the user,
+    but in recentchanges, these urls will be converted to a simplified display
+    form+link.
+  * Modified svn, git, tla backends to recognise such web commits.
+  * Move httpauth support to a plugin.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 19 Nov 2006 16:40:26 -0500
 
