--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,11 @@ ikiwiki (1.34) UNRELEASED; urgency=low
     form+link.
   * Modified svn, git, tla backends to recognise such web commits.
   * Move httpauth support to a plugin.
+  * Add openidsignup config option.
+  * Make the openid plugin support the callbacks from myopenid.com via its 
+    affiliate program.
+  * Change how post signin actions are propigated through the signin process;
+    they're now stored in the session.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 19 Nov 2006 16:40:26 -0500
 
