--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -4,15 +4,28 @@ you through setting up a wiki that is stored in [[Subversion]], [[Git]],
 
 1. [[Install]] ikiwiki. See [[download]] for where to get it.
 
-2. Create the master rcs repository for your wiki.
+2. Decide where your wiki's files will go.
+
+   Pick three directories for respectively the repository (contains
+   the "master copy" and history); working copy (checked-out
+   files from the repository); and web pages (served by the web server).
+
+   For the purposes of this tutorial, we'll set shell variables
+   for these locations, and use those variables in the commands that follow.
+
+	REPOSITORY=~/wikirepo
+	SRCDIR=~/wikiwc
+	DESTDIR=~/public_html/wiki/
+
+3. Create the master rcs repository for your wiki.
 
 		# Subversion
-		svnadmin create /svn/wikirepo
-		svn mkdir file:///svn/wikirepo/trunk -m create
+		svnadmin create $REPOSITORY
+		svn mkdir file://$REPOSITORY/trunk -m create
 		 
 		# Git
-		mkdir /git/wikirepo
-		cd /git/wikirepo
+		mkdir $REPOSITORY
+		cd $REPOSITORY
 		git init-db
 		# Git requires something be in the repo to start with.
 		cp /usr/share/ikiwiki/basewiki/index.mdwn .
@@ -23,26 +36,27 @@ you through setting up a wiki that is stored in [[Subversion]], [[Git]],
 		# save disk space.
 
 		# TLA
-		mkdir /tla
-		tla make-archive me@localhost--wiki /tla/wikirepo
+		mkdir $REPOSITORY
+		tla make-archive me@localhost--wiki $REPOSITORY
 		tla my-id "<me@localhost>"
 
 		# Mercurial
-		hg init /hg/wikirepo
+		hg init $REPOSITORY
 
-3. Check out the repository to make the working copy that ikiwiki will use.
+4. Check out the repository to make the working copy that ikiwiki will use
+   as its source directory.
 
 		# Subversion
-		svn co file:///svn/wikirepo/trunk ~/wikiwc
+		svn co file://$REPOSITORY/trunk ~/wikiwc
 		 
 		# Git
 		# Create a local clone to save disk space and also to
 		# optimize performance. See git-clone(1).
-		git clone -l -s /git/wikirepo ~/wikiwc
+		git clone -l -s $REPOSITORY $SRCDIR
 
 		# TLA
-		mkdir ~/wikiwc
-		cd ~/wikiwc
+		mkdir $SRCDIR
+		cd $SRCDIR
 		tla archive-setup me@localhost--wiki/wiki--0
 		tla init-tree me@localhost--wiki/wiki--0
 	        # Edit {arch}/=tagging-method and change the precious
@@ -52,22 +66,22 @@ you through setting up a wiki that is stored in [[Subversion]], [[Git]],
 		# Mercurial
    		# Mercurial uses a single repo approach, so no need to
 		# clone anything. Because the following examples
-		# refer to the ~/wikiwc working copy we symlink it:
-		ln -s /hg/wikirepo ~/wikiwc
+		# refer to $SRCDIR, we symlink it:
+		ln -s $REPOSITORY $SRCDIR
 
-4. Build your wiki for the first time.
+5. Build your wiki for the first time.
 
-		ikiwiki --verbose ~/wikiwc/ ~/public_html/wiki/ \
+		ikiwiki --verbose $SRCDIR $DESTDIR \
 			--url=http://host/~you/wiki/
 
    Replace the url with the real url to your wiki. You should now
    be able to visit the url and see your wiki.
 
-5. Customise your wiki. The files in `/usr/share/ikiwiki/basewiki/` are
+6. Customise your wiki. The files in `/usr/share/ikiwiki/basewiki/` are
    used if you don't have a custom version, so let's start by making a
    custom version of the wiki's index page:
 
-		cd ~/wikiwc
+		cd $SRCDIR
    		cp /usr/share/ikiwiki/basewiki/index.mdwn .
 		$EDITOR index.mdwn
 		 
@@ -88,14 +102,15 @@ you through setting up a wiki that is stored in [[Subversion]], [[Git]],
 		hg add index.mdwn
 		hg commit -m customised index.mdwn
 
-   You can also add any files you like from scratch of course.
+   You can also add any files you like from scratch of course. Use the same
+   command as in step 5 to rebuild the wiki.
 
-6. Repeat steps 4 and 5 as desired, editing or adding pages and rebuilding
+7. Repeat steps 5 and 6 as desired, editing or adding pages and rebuilding
    the wiki. You can play around with other ikiwiki parameters such as
    `--wikiname` and `--rebuild` too. Get comfortable with its command line
    (see [[usage]]).
 
-7. By now you should be getting tired of typing in all the command line
+8. By now you should be getting tired of typing in all the command line
    options each time you change something in your wiki's setup. And it's
    also getting old to have to manualy rebuild the wiki each time you
    change a file. Time to introduce setup files. 
@@ -112,31 +127,27 @@ you through setting up a wiki that is stored in [[Subversion]], [[Git]],
 
    If you want to use something other than subversion, comment out the
    subversion configuration, and uncomment and edit the configuration for
-   your chosen RCS.
-
-   Note that the default file has a block to configure a [[post-commit]] 
-   wrapper to update the wiki. You need to uncomment the related block for
-   whatever RCS you use and comment out the other rcs blocks.
+   your chosen RCS. Note that the default file has a block to configure a
+   [[post-commit]] wrapper to update the wiki. You need to uncomment the
+   related block for whatever RCS you use and comment out the other rcs
+   blocks.
 
    When you're satisfied, run `ikiwiki --setup ikiwiki.setup`, and it
    will set everything up and update your wiki.
 
-8. Set up [[CGI]] to allow editing the wiki from the web.
+9. Turn on additional features.
 
-   Just edit ikiwiki.setup, uncomment the block for the cgi wrapper, make
-   sure the filename for the cgi wrapper is ok, run 
-   `ikiwiki --setup ikiwiki.setup`, and you're done!
+   Now you have a basic wiki with a configuration file. Time to experiment
+   with ikiwiki's many features. 
+   
+   Let's first enable a key wiki feature and set up [[CGI]] to allow
+   editing the wiki from the web. Just edit ikiwiki.setup, uncomment the
+   block for the cgi wrapper, make sure the filename for the cgi wrapper
+   is ok, run `ikiwiki --setup ikiwiki.setup`, and you're done!
 
-9. Add [[PageHistory]] links to the top of pages. This requires you to have
-   setup a repository browser.  For Subversion, you may use [[ViewCVS]] or
-   something similar to access your [[Subversion]] repository.  For Git,
-   [[Gitweb]] can be used, etc.
-   
-   The `historyurl` setting makes ikiwiki add the links, and in that url,
-   "\[[file]]" is replaced with the name of the file to view. So edit
-   ikiwiki.setup and ucomment the appropriate `historyurl` setting and edit
-   it for your setup.
-   
-   Then run `ikiwiki --setup ikiwiki.setup` again.
+   There are lots of other configuration options in ikiwiki.setup that you
+   can uncomment, configure, and enable by re-running
+   `ikiwiki --setup ikiwiki.setup`. Be sure to browse through all the
+   [[plugins]]..
 
 10. Enjoy your new wiki! Add yourself to [[IkiWikiUsers]].
